rename all and modify readme

--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -120,3 +120,8 @@ DNS服务器与各个域名服务器之间——迭代查询
 	dnsrecon -d sina.com --lifetime 10 -t brt -D dnsbig.txt
 	-t 查询强度,brt 爆破,std 标准
 	dnsrecon -t std -d sina.com
+
+### 5.DNS注册信息
+	whois -h whois.apnic.net 192.0.43.10
+	whois sina.com
+	whois 202.106.0.20
