add search engine

--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -125,3 +125,10 @@ DNS服务器与各个域名服务器之间——迭代查询
 	whois -h whois.apnic.net 192.0.43.10
 	whois sina.com
 	whois 202.106.0.20
+
+### 6.搜索引擎
+* 公司新闻动态
+* 公司雇员信息
+* 机密文档/网络拓扑
+* 用户名密码
+* 目标系统软硬件技术架构
