--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -127,8 +127,22 @@ DNS服务器与各个域名服务器之间——迭代查询
 	whois 202.106.0.20
 
 ### 6.搜索引擎
-* 公司新闻动态
-* 公司雇员信息
-* 机密文档/网络拓扑
-* 用户名密码
-* 目标系统软硬件技术架构
+* 公司新闻动态    
+* 公司雇员信息    
+* 机密文档/网络拓扑    
+* 用户名密码    
+* 目标系统软硬件技术架构     
+
+#### SHODAN
+**搜索联网的设备**    
+Banner: http, ftp, ssh, telnet    
+https://www.shodan.io/    
+    
+**常见filter:**    
+* net(192.168.20.1)
+* city
+* country(CN, US)
+* port(80, 21, 22, 23)
+* os
+* Hostname(主机或域名)
+* server
