add search engine

--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -135,6 +135,7 @@ DNS服务器与各个域名服务器之间——迭代查询
 
 #### SHODAN
 	搜索联网的设备   
+	banner 欢迎语，其中可能会包含一些敏感信息    
 	Banner: http, ftp, ssh, telnet    
 	https://www.shodan.io/    
 		
@@ -146,3 +147,6 @@ DNS服务器与各个域名服务器之间——迭代查询
 		os
 		Hostname(主机或域名)
 		server
+		   
+	默认密码    
+
