add search engine

--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -140,7 +140,9 @@ DNS服务器与各个域名服务器之间——迭代查询
 	https://www.shodan.io/    
 		
 	常见filter:    
-		net(192.168.20.1)
+		net(192.168.20.1) 
+			net:8.8.8.8
+			net:8.8.8.8/24 查询所在C类地址段的服务器
 		city
 		country(CN, US)
 		port(80, 21, 22, 23)
