add search engine

--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -138,17 +138,22 @@ DNS服务器与各个域名服务器之间——迭代查询
 	banner 欢迎语，其中可能会包含一些敏感信息    
 	Banner: http, ftp, ssh, telnet    
 	https://www.shodan.io/    
+	"用默认密码能打开全世界一半的设备"
 		
 	常见filter:    
 		net(192.168.20.1) 
-			net:8.8.8.8
-			net:8.8.8.8/24 查询所在C类地址段的服务器
 		city
 		country(CN, US)
-		port(80, 21, 22, 23)
-		os
+		port(80, 21, 22, 23, 3306(mysql server))
+		os 操作系统筛选
 		Hostname(主机或域名)
 		server
 		   
-	默认密码    
-
+		net:8.8.8.8
+		net:8.8.8.8/24 查询所在C类地址段的服务器
+		country:CN 所有中国的在互联网出现的设备
+		country:CN city:beijing
+		country:CN city:beijing port:22
+		country:CN city:beijing port:22 HTTP/1.1 200 加个banner200有希望能访问，404
+		os: "windows"
+		
