shodan search engine completed

--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -147,7 +147,7 @@ DNS服务器与各个域名服务器之间——迭代查询
 		port(80, 21, 22, 23, 3306(mysql server))
 		os 操作系统筛选
 		Hostname(主机或域名)
-		server
+		server server端软件
 		   
 		net:8.8.8.8
 		net:8.8.8.8/24 查询所在C类地址段的服务器
@@ -156,4 +156,9 @@ DNS服务器与各个域名服务器之间——迭代查询
 		country:CN city:beijing port:22
 		country:CN city:beijing port:22 HTTP/1.1 200 加个banner200有希望能访问，404
 		os: "windows"
-		hostname:baidu.com
+		hostname: baidu.com
+		server: apache
+
+		200 OK cisco country:JP 日本能访问的思科设备
+		user: admin pass: password
+		linux upnp avtech
