--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -162,3 +162,7 @@ DNS服务器与各个域名服务器之间——迭代查询
 		200 OK cisco country:JP 日本能访问的思科设备
 		user: admin pass: password
 		linux upnp avtech
+
+		https://account.shodan.io 账号信息
+		提供了API Key
+		Explore 帮助信息
