add google engine

--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -163,7 +163,15 @@ DNS服务器与各个域名服务器之间——迭代查询
 		user: admin pass: password
 		linux upnp avtech
 
-		https://account.shodan.io 账号信息
-		提供了API Key
-		Explore 帮助信息
-		Add-on firefox中有shodan插件,对当前访问的网站进行搜索
+	https://account.shodan.io 账号信息
+	提供了API Key
+	Explore 帮助信息
+	Add-on firefox中有shodan插件,对当前访问的网站进行搜索    
+	      
+#### Google
+	catched 可查看被爬到Google的数据库中时网页的版本
+	+充值 -支付(含有“支付”，不含有“充值”)
+	北京的电子商务公司法人电话——北京 intitle:电子商务 intext:法人 intext:电话
+	阿里网站上的北京公司联系人——site: alibaba.com inurl:contact
+	塞班司法案的PDF文档——SOX filetype:pdf
+	法国的支付相关页面——payment site:fr
