--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -175,3 +175,6 @@ DNS服务器与各个域名服务器之间——迭代查询
 	阿里网站上的北京公司联系人——site: alibaba.com inurl:contact
 	塞班司法案的PDF文档——SOX filetype:pdf
 	法国的支付相关页面——payment site:fr
+
+	实例：
+		inurl: "level/15/exec/-/show"
