--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -178,3 +178,9 @@ DNS服务器与各个域名服务器之间——迭代查询
 
 	实例：
 		inurl: "level/15/exec/-/show"
+		搜索交换机设备
+		intitle:"netbotz appliance" "ok"
+		搜索某一特定类型机架式网络摄像机
+		inurl:/admin/login.php
+		搜索后台管理登录界面
+		inurl:qq.txt
