--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -184,3 +184,8 @@ DNS服务器与各个域名服务器之间——迭代查询
 		inurl:/admin/login.php
 		搜索后台管理登录界面
 		inurl:qq.txt
+		搜索被盗的QQ账号密码
+		filetype:xls "username | password"
+		inurl:ftp "password" filetype:xls site:baidu.com
+		inurl:Service.pwd
+		FrontPage的一个漏洞，能把网站账号密码搜出来
