--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -189,3 +189,10 @@ DNS服务器与各个域名服务器之间——迭代查询
 		inurl:ftp "password" filetype:xls site:baidu.com
 		inurl:Service.pwd
 		FrontPage的一个漏洞，能把网站账号密码搜出来
+	
+	Google hacking:
+		http://exploit-db.com/google-dorks
+
+#### YANDEX
+	世界第四大搜索引擎——俄罗斯
+	https://www.yandex.com/
