--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -199,4 +199,7 @@ DNS服务器与各个域名服务器之间——迭代查询
 
 ### 7.用户信息
 #### 邮箱、主机
-
+	theharvester -d sina.com -l 500  -b google
+	theharvester -d sina.com -l 200 -b linkedin
+	proxychains theharvester -d sina.com -l 500 -b google 使用代理
+	-l 限制搜索数量,默认50
