--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -203,3 +203,4 @@ DNS服务器与各个域名服务器之间——迭代查询
 	theharvester -d sina.com -l 200 -b linkedin
 	proxychains theharvester -d sina.com -l 500 -b google 使用代理
 	-l 限制搜索数量,默认50
+	搜索量过大时可能会触发搜索引擎的保护机制,导致搜索 连接请求被中断
