add other methods

--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -213,3 +213,11 @@ DNS服务器与各个域名服务器之间——迭代查询
 	
 ### 8.MALTEGO
 	GUI界面
+	Transform
+
+### 9.其他途径
+* 社交网络
+* 工商注册
+* 新闻组/论坛
+* 招聘网站
+* http://www.archive.org/web/web.php
