--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -220,5 +220,5 @@ DNS服务器与各个域名服务器之间——迭代查询
 * 工商注册
 * 新闻组/论坛
 * 招聘网站
-* http://www.archive.org/web/web.php 收集其他网站的归档
+* http://www.archive.org/web/web.php 收集其他网站的历史归档
 
