--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -224,3 +224,6 @@ DNS服务器与各个域名服务器之间——迭代查询
 
 ### 10.个人专属的密码字典
 	按个人信息生成其专属的密码字典
+	CUPP——Common User Password Profile
+	git clone https://github.com/Mebus/cupp.git
+	python cupp.py -i
