--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -227,3 +227,4 @@ DNS服务器与各个域名服务器之间——迭代查询
 	CUPP——Common User Password Profile
 	git clone https://github.com/Mebus/cupp.git
 	python cupp.py -i
+	-i 交互模式生成密码猜测字典
