--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -229,7 +229,7 @@ DNS服务器与各个域名服务器之间——迭代查询
 	python cupp.py -i
 	-i 交互模式生成密码猜测字典
 
-### 11.METADATA
+### 11.METADATA(元数据)
 	Exif图片信息:照片拍摄时所记录的信息(GPS信息、相机参数、设备信息...)
 
 	exiftool
