--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -237,3 +237,7 @@ DNS服务器与各个域名服务器之间——迭代查询
 		yaourt -S perl-image-exiftool
 	
 	Foca(Windows下的GUI软件)
+
+### 12.RECON-NG
+**全特性的web侦查框架**     
+基于Python开发     
