--- a/03_被动信息收集.md
+++ b/03_被动信息收集.md
@@ -239,5 +239,5 @@ DNS服务器与各个域名服务器之间——迭代查询
 	Foca(Windows下的GUI软件)
 
 ### 12.RECON-NG
-**全特性的web侦查框架**     
+**全特性的web侦查框架(综合性功能)**     
 基于Python开发     
